--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<section id="main">
-			<div class="container">
-				<div class="row">
+			<div class="container-fluid">
+				<div class="row text-center">
 					<div class="col-md-4">
 						<a href="pages/canvas01.html">
 							<img class="img-thumbnail" src="imgs/canvas01.png" alt="">
@@ -28,6 +28,21 @@
 					</div>
 				</div>
 			</div>
+		</section>
+
+		<section id="instruction">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<blockquote class="blockquote text-center">
+							<p class="mb-0">ESC для выхода из анимации</p>
+							<footer class="blockquote-footer">Создатель: <cite title="Source Title">Ким Максим</cite></footer>
+						</blockquote>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<script src="js/main.js"></script>
 	</body>
 </html>
