--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<div class="col-md-12">
 						<blockquote class="blockquote text-center">
 							<p class="mb-0">ESC для выхода из анимации</p>
-							<footer class="blockquote-footer">Создатель: <cite title="Source Title">Ким Максим</cite></footer>
+							<footer class="blockquote-footer font-italic">Ким Максим</footer>
 						</blockquote>
 					</div>
 				</div>
