--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</div>
 					<div class="col-md-4">
 						<a href="pages/canvas03.html">
-							<img class="img-thumbnail" src="imgs/new.png" alt="">
+							<img class="img-thumbnail" src="imgs/canvas03.png" alt="">
 						</a>
 					</div>
 				</div>
