--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
 				<div class="row text-center">
 					<div class="col-md-4">
 						<a href="pages/canvas01.html">
-							<img class="img-thumbnail" src="imgs/canvas01.png" alt="">
+							<img class="img-thumbnail img-fluid" src="imgs/canvas01.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4">
 						<a href="pages/canvas02.html">
-							<img class="img-thumbnail" src="imgs/canvas02.png" alt="">
+							<img class="img-thumbnail img-fluid" src="imgs/canvas02.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4">
 						<a href="pages/canvas03.html">
-							<img class="img-thumbnail" src="imgs/canvas03.png" alt="">
+							<img class="img-thumbnail img-fluid" src="imgs/canvas03.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-4">
+						<a href="#">
+							<img class="img-thumbnail img-fluid" src="imgs/new.png" alt="">
 						</a>
 					</div>
 				</div>
