--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="#">
-							<img class="img-thumbnail img-fluid" src="imgs/new.png" alt="">
+						<a href="pages/canvas04.html">
+							<img class="img-thumbnail img-fluid" src="imgs/canvas04.png" alt="">
+						</a>
+					</div>
+					<div class="col-md-4">
+						<a href="pages/canvas05.html">
+							<label for=""><img class="img-thumbnail img-fluid" src="imgs/new.png" alt="">В разработке</label>
 						</a>
 					</div>
 				</div>
