--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</div>
 					<div class="col-md-4">
 						<a href="pages/canvas05.html">
-							<label for=""><img class="img-thumbnail img-fluid" src="imgs/new.png" alt="">В разработке</label>
+							<label for=""><img class="img-thumbnail img-fluid" src="imgs/new.png" alt="">В разработке...</label>
 						</a>
 					</div>
 				</div>
