--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 							<label for=""><img class="img-thumbnail img-fluid" src="imgs/canvas05.png" alt="">В разработке...</label>
 						</a>
 					</div>
+					<div class="col-md-4">
+						<a href="pages/canvas06.html">
+							<img class="img-thumbnail img-fluid" src="imgs/canvas06.png">
+						</a>
+					</div>
 				</div>
 			</div>
 		</section>
