--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 							<img class="img-thumbnail img-fluid" src="imgs/canvas06.png">
 						</a>
 					</div>
+					<div class="col-md-4">
+						<a href="pages/canvas07.html">
+							<img class="img-thumbnail img-fluid" src="imgs/new.png">
+						</a>
+					</div>
 				</div>
 			</div>
 		</section>
