--- a/index.html
+++ b/index.html
@@ -33,31 +33,13 @@
 					</div>
 					<div class="col-md-4">
 						<a href="pages/canvas05.html">
-							<label for=""><img class="img-thumbnail img-fluid" src="imgs/canvas05.png" alt="">В разработке...</label>
+							<img class="img-thumbnail img-fluid" src="imgs/canvas05.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="pages/canvas06.html">
-							<img class="img-thumbnail img-fluid" src="imgs/canvas06.png">
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="pages/canvas07.html">
+						<a href="#">
 							<img class="img-thumbnail img-fluid" src="imgs/new.png">
 						</a>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section id="instruction">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<blockquote class="blockquote text-center">
-							<p class="mb-0">ESC для выхода из анимации</p>
-							<footer class="blockquote-footer font-italic">Ким Максим</footer>
-						</blockquote>
 					</div>
 				</div>
 			</div>
